syntax = "proto3";

option go_package = "pb/game";

message SceneInfo
{
  uint32 scene_confid = 1;//场景id
  uint32 guid = 2;//场景唯一id
  uint32 mirror_confid = 3;//镜像id
  uint32 dungen_confid = 4;//副本id
  map<uint64, bool> creators = 5;//创建者
}


message CentreChangeSceneInfo
{
  enum eChangeGsStatus
  {
      eLeaveGsScene = 0;//等待老gs保存完毕
      eEnterGsSceneSucceed = 1;//不同服务器要走完这步
      eGateEnterGsSceneSucceed = 2;//todo换的时候gate断线了
  };
  enum eChangeGsType
  {
      eSameGs = 0;//同服务器间切换
      eDifferentGs = 1;//不同服务器间切换
  };
  
  uint32 scene_confid = 1;
  uint32 guid = 2;//场景id
  uint32 dungen_confid = 3;
  uint32 mirror_confid = 4;
  uint32 change_sequence = 5;
  uint32 change_gs_type = 6;
  uint32 change_gs_status = 7;//eChangeGsStatus
  uint64 change_time = 8;//设置超时，超时代表服务器崩溃了,或者网络延时
  bool ignore_full = 9;//忽略人数满了
  bool processing = 10;
}